--- a/bonsai/models/sam2/tests/SAM2_image_predictor_example.ipynb
+++ b/bonsai/models/sam2/tests/SAM2_image_predictor_example.ipynb
@@ -74,15 +74,15 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "from functools import partial\n",
     "\n",
-    "from huggingface_hub import snapshot_download\n",
     "import jax\n",
-    "from jax.lib import xla_bridge\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from PIL import Image\n",
-    "from functools import partial"
+    "from huggingface_hub import snapshot_download\n",
+    "from jax.lib import xla_bridge\n",
+    "from PIL import Image"
    ]
   },
   {
@@ -122,7 +122,7 @@
     "!wget -q -P ./images/ cars.jpg \"https://raw.githubusercontent.com/facebookresearch/sam2/main/notebooks/images/cars.jpg\"\n",
     "!wget -q -P ./images/ groceries.jpg \"https://raw.githubusercontent.com/facebookresearch/sam2/main/notebooks/images/groceries.jpg\"\n",
     "\n",
-    "' '.join(os.listdir(\"./images\"))"
+    "\" \".join(os.listdir(\"./images\"))"
    ]
   },
   {
@@ -135,35 +135,44 @@
    "source": [
     "key = jax.random.PRNGKey(3)\n",
     "\n",
+    "\n",
     "def show_mask(mask, ax, *, random_color=False, borders=True):\n",
     "    if random_color:\n",
     "        rgb = jax.random.uniform(key, (3,))\n",
     "        color = jnp.concatenate([rgb, jnp.array([0.6])])\n",
     "    else:\n",
-    "        color = jnp.array([30/255, 144/255, 1.0, 0.6])\n",
+    "        color = jnp.array([30 / 255, 144 / 255, 1.0, 0.6])\n",
     "    h, w = mask.shape[-2:]\n",
     "    mask_uint8 = jax.device_get(mask.astype(jnp.uint8))  # JAX → np broadcast\n",
     "    mask_img = mask_uint8.reshape(h, w, 1) * color.reshape(1, 1, -1)\n",
     "\n",
     "    if borders:\n",
     "        import cv2\n",
+    "\n",
     "        contours, _ = cv2.findContours(mask_uint8, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_NONE)\n",
     "        # Try to smooth contours\n",
     "        contours = [cv2.approxPolyDP(c, epsilon=0.01, closed=True) for c in contours]\n",
     "        mask_img = cv2.drawContours(mask_img.copy(), contours, -1, color=(1, 1, 1, 0.5), thickness=2)\n",
     "    ax.imshow(mask_img)\n",
     "\n",
+    "\n",
     "def show_points(coords, labels, ax, marker_size=375):\n",
     "    coords, labels = jax.device_get(coords), jax.device_get(labels)\n",
     "    pos_points = coords[labels == 1]\n",
     "    neg_points = coords[labels == 0]\n",
-    "    ax.scatter(pos_points[:, 0], pos_points[:, 1], color='green', marker='*', s=marker_size, edgecolor='white', linewidth=1.25)\n",
-    "    ax.scatter(neg_points[:, 0], neg_points[:, 1], color='red', marker='*', s=marker_size, edgecolor='white', linewidth=1.25)\n",
+    "    ax.scatter(\n",
+    "        pos_points[:, 0], pos_points[:, 1], color=\"green\", marker=\"*\", s=marker_size, edgecolor=\"white\", linewidth=1.25\n",
+    "    )\n",
+    "    ax.scatter(\n",
+    "        neg_points[:, 0], neg_points[:, 1], color=\"red\", marker=\"*\", s=marker_size, edgecolor=\"white\", linewidth=1.25\n",
+    "    )\n",
+    "\n",
     "\n",
     "def show_box(box, ax):\n",
     "    x0, y0 = float(box[0]), float(box[1])\n",
     "    w, h = float(box[2] - box[0]), float(box[3] - box[1])\n",
-    "    ax.add_patch(plt.Rectangle((x0, y0), w, h, edgecolor='green', facecolor=(0, 0, 0, 0), lw=2))\n",
+    "    ax.add_patch(plt.Rectangle((x0, y0), w, h, edgecolor=\"green\", facecolor=(0, 0, 0, 0), lw=2))\n",
+    "\n",
     "\n",
     "def show_masks(image, masks, scores, point_coords=None, box_coords=None, input_labels=None, borders=True):\n",
     "    for i, (mask, score) in enumerate(zip(masks, scores)):\n",
@@ -176,8 +185,8 @@
     "        if box_coords is not None:\n",
     "            show_box(box_coords, plt.gca())\n",
     "        if len(scores) > 1:\n",
-    "            plt.title(f\"Mask {i+1}, Score: {score:.3f}\", fontsize=18)\n",
-    "        plt.axis('off')\n",
+    "            plt.title(f\"Mask {i + 1}, Score: {score:.3f}\", fontsize=18)\n",
+    "        plt.axis(\"off\")\n",
     "        plt.show()"
    ]
   },
@@ -189,7 +198,7 @@
    },
    "outputs": [],
    "source": [
-    "image = Image.open('images/truck.jpg')\n",
+    "image = Image.open(\"images/truck.jpg\")\n",
     "image = np.array(image.convert(\"RGB\"))"
    ]
   },
@@ -219,7 +228,7 @@
    "source": [
     "plt.figure(figsize=(10, 10))\n",
     "plt.imshow(image)\n",
-    "plt.axis('on')\n",
+    "plt.axis(\"on\")\n",
     "plt.show()"
    ]
   },
@@ -321,7 +330,7 @@
     "snapshot_download(model_name, local_dir=MODEL_CP_PATH)\n",
     "\n",
     "config = modeling.SAM2Config.sam2_small()\n",
-    "model_obj = params.create_sam2_from_pretrained(MODEL_CP_PATH + '/model.safetensors', config)\n",
+    "model_obj = params.create_sam2_from_pretrained(MODEL_CP_PATH + \"/model.safetensors\", config)\n",
     "\n",
     "predictor = modeling.SAM2ImagePredictor(model_obj)"
    ]
@@ -397,6 +406,7 @@
     "@partial(jax.jit, static_argnames=[\"model\"])\n",
     "def forward(model, points, labels):\n",
     "    return model.predict(points, labels)\n",
+    "\n",
     "\n",
     "masks, scores, logits = forward(predictor, points, labels)\n",
     "jax.block_until_ready(masks)"
@@ -548,15 +558,18 @@
     "    score_scalar = float(score[i]) if hasattr(score, \"__getitem__\") else float(score)\n",
     "    plt.figure(figsize=(8, 8))\n",
     "    plt.imshow(jax.device_get(image))\n",
-    "    plt.imshow(jax.device_get(mask), alpha=0.5, cmap='Blues')\n",
+    "    plt.imshow(jax.device_get(mask), alpha=0.5, cmap=\"Blues\")\n",
     "    plt.scatter(\n",
     "        jax.device_get(points)[:, 0],\n",
     "        jax.device_get(points)[:, 1],\n",
-    "        c=['lime' if l == 1 else 'red' for l in jax.device_get(labels)],\n",
-    "        s=200, marker='*', edgecolors='white', linewidths=1.5\n",
+    "        c=[\"lime\" if l == 1 else \"red\" for l in jax.device_get(labels)],\n",
+    "        s=200,\n",
+    "        marker=\"*\",\n",
+    "        edgecolors=\"white\",\n",
+    "        linewidths=1.5,\n",
     "    )\n",
     "    plt.title(f\"Score: {score_scalar:.3f}\")\n",
-    "    plt.axis('off')\n",
+    "    plt.axis(\"off\")\n",
     "    plt.show()"
    ]
   }
