--- a/bonsai/models/resnet50/tests/ResNet50_ImageNet_validation_example.ipynb
+++ b/bonsai/models/resnet50/tests/ResNet50_ImageNet_validation_example.ipynb
@@ -114,6 +114,7 @@
     "    # Download ImageNet class names\n",
     "    url = \"https://raw.githubusercontent.com/pytorch/hub/master/imagenet_classes.txt\"\n",
     "    response = requests.get(url)\n",
+    "    response.raise_for_status()  # Raise HTTPError for bad responses (4xx, 5xx)\n",
     "    classes = response.text.strip().split('\\n')\n",
     "    return classes\n",
     "\n",
@@ -297,136 +298,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Batch Processing**\n",
-    "\n",
-    "Let's also demonstrate batch processing for multiple images at once, which is more efficient."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def batch_classify_images(model, image_paths, top_k=5):\n",
-    "    \"\"\"Classify multiple images in a single batch.\"\"\"\n",
-    "    # Preprocess all images\n",
-    "    input_tensors = []\n",
-    "    original_images = []\n",
-    "    \n",
-    "    for image_path in image_paths:\n",
-    "        input_tensor, original_image = preprocess_image(image_path)\n",
-    "        input_tensors.append(input_tensor[0])  # Remove batch dimension\n",
-    "        original_images.append(original_image)\n",
-    "    \n",
-    "    # Stack into batch\n",
-    "    batch_tensor = jnp.stack(input_tensors)\n",
-    "    \n",
-    "    # Run batch inference\n",
-    "    logits = model_lib.forward(model, batch_tensor)\n",
-    "    \n",
-    "    # Process results\n",
-    "    all_predictions = []\n",
-    "    for i in range(len(image_paths)):\n",
-    "        probabilities = jax.nn.softmax(logits[i])\n",
-    "        top_indices = jnp.argsort(probabilities)[-top_k:][::-1]\n",
-    "        top_probs = probabilities[top_indices]\n",
-    "        \n",
-    "        predictions = []\n",
-    "        for idx, prob in zip(top_indices, top_probs):\n",
-    "            class_name = imagenet_classes[idx] if idx < len(imagenet_classes) else f\"class_{idx}\"\n",
-    "            predictions.append((class_name, float(prob)))\n",
-    "        \n",
-    "        all_predictions.append(predictions)\n",
-    "    \n",
-    "    return all_predictions, original_images\n",
-    "\n",
-    "# Test batch processing\n",
-    "print(\"\\n\" + \"=\"*80)\n",
-    "print(\"BATCH PROCESSING RESULTS\")\n",
-    "print(\"=\"*80)\n",
-    "\n",
-    "image_paths = [f\"./images/{f}\" for f in image_files[:3]]  # Process first 3 images\n",
-    "batch_predictions, batch_images = batch_classify_images(model, image_paths)\n",
-    "\n",
-    "for i, (image_path, predictions, image) in enumerate(zip(image_paths, batch_predictions, batch_images)):\n",
-    "    print(f\"\\nImage {i+1}: {os.path.basename(image_path)}\")\n",
-    "    print(\"-\" * 40)\n",
-    "    for j, (class_name, confidence) in enumerate(predictions, 1):\n",
-    "        print(f\"{j}. {class_name}: {confidence:.4f} ({confidence*100:.2f}%)\")\n",
-    "    \n",
-    "    # Show individual image with predictions\n",
-    "    show_image_with_predictions(image, predictions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## **Performance Benchmarking**\n",
-    "\n",
-    "Let's benchmark the model's performance on different batch sizes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "\n",
-    "def benchmark_performance(model, batch_sizes=[1, 4, 8, 16]):\n",
-    "    \"\"\"Benchmark model performance across different batch sizes.\"\"\"\n",
-    "    print(\"Performance Benchmarking\")\n",
-    "    print(\"=\" * 50)\n",
-    "    \n",
-    "    # Create dummy input for benchmarking\n",
-    "    image_size = 224\n",
-    "    \n",
-    "    for batch_size in batch_sizes:\n",
-    "        # Create dummy input\n",
-    "        dummy_input = jnp.ones((batch_size, image_size, image_size, 3), dtype=jnp.float32)\n",
-    "        \n",
-    "        # Warmup\n",
-    "        _ = model_lib.forward(model, dummy_input)\n",
-    "        jax.block_until_ready(_)\n",
-    "        \n",
-    "        # Benchmark\n",
-    "        num_runs = 10\n",
-    "        start_time = time.perf_counter()\n",
-    "        \n",
-    "        for _ in range(num_runs):\n",
-    "            logits = model_lib.forward(model, dummy_input)\n",
-    "            jax.block_until_ready(logits)\n",
-    "        \n",
-    "        end_time = time.perf_counter()\n",
-    "        total_time = end_time - start_time\n",
-    "        avg_time = total_time / num_runs\n",
-    "        throughput = batch_size / avg_time\n",
-    "        \n",
-    "        print(f\"Batch size {batch_size:2d}: {avg_time:.4f}s per inference, {throughput:.2f} images/sec\")\n",
-    "\n",
-    "# Run benchmark\n",
-    "benchmark_performance(model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## **Conclusion**\n",
     "\n",
     "This notebook demonstrates how to use the ResNet-50 model from the Bonsai library to perform ImageNet classification on real images. The model successfully:\n",
     "\n",
     "1. **Loads pre-trained weights** from Microsoft's ResNet-50 model\n",
     "2. **Preprocesses images** according to ImageNet standards\n",
-    "3. **Performs inference** on individual and batched images\n",
+    "3. **Performs inference** on individual images\n",
     "4. **Provides confidence scores** for top-k predictions\n",
-    "5. **Benchmarks performance** across different batch sizes\n",
     "\n",
-    "The implementation shows that the Bonsai ResNet-50 model works correctly for real-world image classification tasks, addressing the issue mentioned in GitHub issue #17 about needing validation against actual images rather than just performance testing.\n",
-    "\n"
+    "The implementation shows that the Bonsai ResNet-50 model works correctly for real-world image classification tasks"
    ]
   }
  ],
