fix: Resolve E722 by handling specific exceptions in imagenet loader

--- a/bonsai/models/resnet50/tests/ResNet50_ImageNet_validation_example.ipynb
+++ b/bonsai/models/resnet50/tests/ResNet50_ImageNet_validation_example.ipynb
@@ -49,18 +49,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "import requests\n",
-    "from pathlib import Path\n",
     "\n",
-    "from huggingface_hub import snapshot_download\n",
     "import jax\n",
-    "from jax.lib import xla_bridge\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import requests\n",
+    "from huggingface_hub import snapshot_download\n",
+    "from jax.lib import xla_bridge\n",
     "from PIL import Image, ImageOps\n",
-    "from functools import partial\n",
     "\n",
     "print(f\"JAX version: {jax.__version__}\")\n",
     "print(f\"JAX device: {xla_bridge.get_backend().platform}\")"
@@ -91,7 +88,7 @@
     "!wget -q -P ./images/ hammerhead.jpg \"https://raw.githubusercontent.com/EliSchwartz/imagenet-sample-images/master/n01494475_hammerhead.JPEG\"\n",
     "!wget -q -P ./images/ electric_ray.jpg \"https://raw.githubusercontent.com/EliSchwartz/imagenet-sample-images/master/n01496331_electric_ray.JPEG\"\n",
     "\n",
-    "' '.join(os.listdir(\"./images\"))"
+    "\" \".join(os.listdir(\"./images\"))"
    ]
   },
   {
@@ -115,14 +112,15 @@
     "    url = \"https://raw.githubusercontent.com/pytorch/hub/master/imagenet_classes.txt\"\n",
     "    response = requests.get(url)\n",
     "    response.raise_for_status()  # Raise HTTPError for bad responses (4xx, 5xx)\n",
-    "    classes = response.text.strip().split('\\n')\n",
+    "    classes = response.text.strip().split(\"\\n\")\n",
     "    return classes\n",
+    "\n",
     "\n",
     "try:\n",
     "    imagenet_classes = load_imagenet_classes()\n",
     "    print(f\"Loaded {len(imagenet_classes)} ImageNet classes\")\n",
     "    print(\"Sample classes:\", imagenet_classes[:5])\n",
-    "except:\n",
+    "except requests.exceptions.RequestException:\n",
     "    # Fallback to a subset of common classes\n",
     "    print(\"Could not load ImageNet classes, using fallback\")\n",
     "    imagenet_classes = [f\"class_{i}\" for i in range(1000)]"
@@ -146,23 +144,25 @@
     "from bonsai.models.resnet50 import modeling as model_lib\n",
     "from bonsai.models.resnet50 import params\n",
     "\n",
+    "\n",
     "def load_resnet50_model():\n",
     "    \"\"\"Load the pre-trained ResNet-50 model.\"\"\"\n",
     "    # Download model weights\n",
     "    model_name = \"microsoft/resnet-50\"\n",
     "    model_path = \"/tmp/models-bonsai/resnet-50\"\n",
-    "    \n",
+    "\n",
     "    if not os.path.isdir(model_path):\n",
     "        print(f\"Downloading {model_name}...\")\n",
     "        snapshot_download(model_name, local_dir=model_path)\n",
     "        print(\"Download complete!\")\n",
-    "    \n",
+    "\n",
     "    # Load the model\n",
     "    safetensors_path = os.path.join(model_path, \"model.safetensors\")\n",
     "    model = params.create_resnet50_from_pretrained(safetensors_path)\n",
-    "    \n",
+    "\n",
     "    print(\"ResNet-50 model loaded successfully!\")\n",
     "    return model\n",
+    "\n",
     "\n",
     "# Load the model\n",
     "model = load_resnet50_model()"
@@ -186,47 +186,48 @@
     "def preprocess_image(image_path, target_size=(224, 224)):\n",
     "    \"\"\"Preprocess image for ResNet-50 inference.\"\"\"\n",
     "    # Load image\n",
-    "    image = Image.open(image_path).convert('RGB')\n",
-    "    \n",
+    "    image = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
     "    # Resize image\n",
     "    image = ImageOps.fit(image, target_size, method=Image.Resampling.LANCZOS)\n",
-    "    \n",
+    "\n",
     "    # Convert to numpy array and normalize to [0, 1]\n",
     "    image_array = np.array(image).astype(np.float32) / 255.0\n",
-    "    \n",
+    "\n",
     "    # ImageNet normalization: mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]\n",
     "    mean = np.array([0.485, 0.456, 0.406])\n",
     "    std = np.array([0.229, 0.224, 0.225])\n",
-    "    \n",
+    "\n",
     "    # Normalize\n",
     "    image_array = (image_array - mean) / std\n",
-    "    \n",
+    "\n",
     "    # Add batch dimension and ensure correct shape (batch, height, width, channels)\n",
     "    image_array = np.expand_dims(image_array, axis=0)\n",
-    "    \n",
+    "\n",
     "    return image_array, image\n",
+    "\n",
     "\n",
     "def show_image_with_predictions(image, predictions, top_k=5):\n",
     "    \"\"\"Display image with top-k predictions.\"\"\"\n",
     "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6))\n",
-    "    \n",
+    "\n",
     "    # Show image\n",
     "    ax1.imshow(image)\n",
     "    ax1.set_title(\"Input Image\", fontsize=14)\n",
-    "    ax1.axis('off')\n",
-    "    \n",
+    "    ax1.axis(\"off\")\n",
+    "\n",
     "    # Show predictions\n",
     "    y_pos = np.arange(len(predictions))\n",
     "    ax2.barh(y_pos, [p[1] for p in predictions])\n",
     "    ax2.set_yticks(y_pos)\n",
     "    ax2.set_yticklabels([p[0] for p in predictions])\n",
-    "    ax2.set_xlabel('Confidence Score')\n",
+    "    ax2.set_xlabel(\"Confidence Score\")\n",
     "    ax2.set_yticks(y_pos)\n",
     "    ax2.set_yticklabels([p[0] for p in predictions])\n",
-    "    ax2.set_xlabel('Confidence Score')\n",
-    "    ax2.set_title(f'Top-{top_k} Predictions', fontsize=14)\n",
+    "    ax2.set_xlabel(\"Confidence Score\")\n",
+    "    ax2.set_title(f\"Top-{top_k} Predictions\", fontsize=14)\n",
     "    ax2.invert_yaxis()  # Top prediction at the top\n",
-    "    \n",
+    "\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
@@ -250,46 +251,47 @@
     "    \"\"\"Classify a single image and return top-k predictions.\"\"\"\n",
     "    # Preprocess image\n",
     "    input_tensor, original_image = preprocess_image(image_path)\n",
-    "    \n",
+    "\n",
     "    # Convert to JAX array\n",
     "    input_tensor = jnp.array(input_tensor)\n",
-    "    \n",
+    "\n",
     "    # Run inference\n",
     "    logits = model_lib.forward(model, input_tensor)\n",
-    "    \n",
+    "\n",
     "    # Apply softmax to get probabilities\n",
     "    probabilities = jax.nn.softmax(logits[0])\n",
-    "    \n",
+    "\n",
     "    # Get top-k predictions\n",
     "    top_indices = jnp.argsort(probabilities)[-top_k:][::-1]\n",
     "    top_probs = probabilities[top_indices]\n",
-    "    \n",
+    "\n",
     "    # Format results\n",
     "    predictions = []\n",
     "    for idx, prob in zip(top_indices, top_probs):\n",
     "        class_name = imagenet_classes[idx] if idx < len(imagenet_classes) else f\"class_{idx}\"\n",
     "        predictions.append((class_name, float(prob)))\n",
-    "    \n",
+    "\n",
     "    return predictions, original_image\n",
     "\n",
+    "\n",
     "# Test on all images\n",
-    "image_files = [f for f in os.listdir(\"./images\") if f.endswith(('.jpg', '.jpeg', '.png', '.JPEG'))]\n",
+    "image_files = [f for f in os.listdir(\"./images\") if f.endswith((\".jpg\", \".jpeg\", \".png\", \".JPEG\"))]\n",
     "\n",
     "for image_file in image_files:\n",
-    "    print(f\"\\n{'='*60}\")\n",
+    "    print(f\"\\n{'=' * 60}\")\n",
     "    print(f\"Classifying: {image_file}\")\n",
-    "    print(f\"{'='*60}\")\n",
-    "    \n",
+    "    print(f\"{'=' * 60}\")\n",
+    "\n",
     "    try:\n",
     "        predictions, image = classify_image(model, f\"./images/{image_file}\")\n",
-    "        \n",
-    "        print(f\"\\nTop-5 predictions:\")\n",
+    "\n",
+    "        print(\"\\nTop-5 predictions:\")\n",
     "        for i, (class_name, confidence) in enumerate(predictions, 1):\n",
-    "            print(f\"{i}. {class_name}: {confidence:.4f} ({confidence*100:.2f}%)\")\n",
-    "        \n",
+    "            print(f\"{i}. {class_name}: {confidence:.4f} ({confidence * 100:.2f}%)\")\n",
+    "\n",
     "        # Show visualization\n",
     "        show_image_with_predictions(image, predictions)\n",
-    "        \n",
+    "\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing {image_file}: {e}\")"
    ]
@@ -314,48 +316,49 @@
     "    # Preprocess all images\n",
     "    input_tensors = []\n",
     "    original_images = []\n",
-    "    \n",
+    "\n",
     "    for image_path in image_paths:\n",
     "        input_tensor, original_image = preprocess_image(image_path)\n",
     "        input_tensors.append(input_tensor[0])  # Remove batch dimension\n",
     "        original_images.append(original_image)\n",
-    "    \n",
+    "\n",
     "    # Stack into batch\n",
     "    batch_tensor = jnp.stack(input_tensors)\n",
-    "    \n",
+    "\n",
     "    # Run batch inference\n",
     "    logits = model_lib.forward(model, batch_tensor)\n",
-    "    \n",
+    "\n",
     "    # Process results\n",
     "    all_predictions = []\n",
     "    for i in range(len(image_paths)):\n",
     "        probabilities = jax.nn.softmax(logits[i])\n",
     "        top_indices = jnp.argsort(probabilities)[-top_k:][::-1]\n",
     "        top_probs = probabilities[top_indices]\n",
-    "        \n",
+    "\n",
     "        predictions = []\n",
     "        for idx, prob in zip(top_indices, top_probs):\n",
     "            class_name = imagenet_classes[idx] if idx < len(imagenet_classes) else f\"class_{idx}\"\n",
     "            predictions.append((class_name, float(prob)))\n",
-    "        \n",
+    "\n",
     "        all_predictions.append(predictions)\n",
-    "    \n",
+    "\n",
     "    return all_predictions, original_images\n",
     "\n",
+    "\n",
     "# Test batch processing\n",
-    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"\\n\" + \"=\" * 80)\n",
     "print(\"BATCH PROCESSING RESULTS\")\n",
-    "print(\"=\"*80)\n",
+    "print(\"=\" * 80)\n",
     "\n",
     "image_paths = [f\"./images/{f}\" for f in image_files[:3]]  # Process first 3 images\n",
     "batch_predictions, batch_images = batch_classify_images(model, image_paths)\n",
     "\n",
     "for i, (image_path, predictions, image) in enumerate(zip(image_paths, batch_predictions, batch_images)):\n",
-    "    print(f\"\\nImage {i+1}: {os.path.basename(image_path)}\")\n",
+    "    print(f\"\\nImage {i + 1}: {os.path.basename(image_path)}\")\n",
     "    print(\"-\" * 40)\n",
     "    for j, (class_name, confidence) in enumerate(predictions, 1):\n",
-    "        print(f\"{j}. {class_name}: {confidence:.4f} ({confidence*100:.2f}%)\")\n",
-    "    \n",
+    "        print(f\"{j}. {class_name}: {confidence:.4f} ({confidence * 100:.2f}%)\")\n",
+    "\n",
     "    # Show individual image with predictions\n",
     "    show_image_with_predictions(image, predictions)"
    ]
