--- a/bonsai/models/vgg19/tests/VGG19_ImageNet_validation_example.ipynb
+++ b/bonsai/models/vgg19/tests/VGG19_ImageNet_validation_example.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<a href=\"https://colab.research.google.com/github/eari100/bonsai/blob/vgg-19/bonsai/models/vgg19/tests/VGG19_ImageNet_validation_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/jax-ml/bonsai/blob/main/bonsai/models/vgg19/tests/VGG19_ImageNet_validation_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,17 +34,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "!pip install -q git+https://github.com/eari100/bonsai@vgg-19\n",
-    "!pip install -q pillow matplotlib requests"
-   ],
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "!pip install -q git+https://github.com/jax-ml/bonsai@main\n",
+    "!pip install -q pillow matplotlib requests"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -57,9 +61,7 @@
     "\n",
     "print(f\"JAX version: {jax.__version__}\")\n",
     "print(f\"JAX device: {xla_bridge.get_backend().platform}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,7 +74,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Create images directory\n",
     "os.makedirs(\"./images\", exist_ok=True)\n",
@@ -85,9 +89,7 @@
     "!wget -q -P ./images/ electric_ray.jpg \"https://raw.githubusercontent.com/EliSchwartz/imagenet-sample-images/master/n01496331_electric_ray.JPEG\"\n",
     "\n",
     "\" \".join(os.listdir(\"./images\"))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,7 +102,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def load_imagenet_classes():\n",
     "    \"\"\"Load ImageNet class names from a common source.\"\"\"\n",
@@ -120,9 +124,7 @@
     "    # Fallback to a subset of common classes\n",
     "    print(\"Could not load ImageNet classes, using fallback\")\n",
     "    imagenet_classes = [f\"class_{i}\" for i in range(1000)]"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,7 +137,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from flax import nnx\n",
     "\n",
@@ -163,9 +167,7 @@
     "# Load the model\n",
     "model = load_vgg19_model()\n",
     "graphdef, state = nnx.split(model)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,7 +180,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def preprocess_image(image_path, target_size=(224, 224)):\n",
     "    \"\"\"Preprocess image for VGG-19 inference.\"\"\"\n",
@@ -227,9 +231,7 @@
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,7 +244,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def classify_image(graphdef, state, image_path, top_k=5):\n",
     "    \"\"\"Classify a single image and return top-k predictions.\"\"\"\n",
@@ -291,9 +295,7 @@
     "\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing {image_file}: {e}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -306,7 +308,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def batch_classify_images(graphdef, state, image_paths, top_k=5):\n",
     "    \"\"\"Classify multiple images in a single batch.\"\"\"\n",
@@ -358,9 +362,7 @@
     "\n",
     "    # Show individual image with predictions\n",
     "    show_image_with_predictions(image, predictions)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -381,12 +383,12 @@
  ],
  "metadata": {
   "colab": {
-   "name": "ResNet50 ImageNet Validation Example",
+   "name": "VGG19 ImageNet Validation Example",
    "private_outputs": true,
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -400,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
