Change the git repository address to jax-ml

--- a/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb
+++ b/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<a href=\"https://colab.research.google.com/github/eari100/bonsai/blob/DenseNet-121/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": "<a href=\"https://colab.research.google.com/github/jax-ml/bonsai/blob/main/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
   },
   {
    "cell_type": "markdown",
@@ -34,7 +34,7 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "!pip install -q git+https://github.com/eari100/bonsai@DenseNet-121\n",
+    "!pip install -q git+https://github.com/jax-ml/bonsai@main\n",
     "!pip install -q pillow matplotlib requests"
    ],
    "outputs": [],
