fixed readme + jupyter checkpoints

--- a/bonsai/models/vae/tests/VAE_segmentation_example.ipynb
+++ b/bonsai/models/vae/tests/VAE_segmentation_example.ipynb
@@ -21,19 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!pip install -q git+https://github.com/jax-ml/bonsai@main\n",
     "!pip install -q optax tensorflow-datasets matplotlib\n",
-    "! pip install tensorflow -q\n",
+    "!pip install tensorflow -q\n",
     "!pip install --upgrade flax -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +44,10 @@
     "import tensorflow_datasets as tfds\n",
     "from flax import nnx\n",
     "import tensorflow as tf\n",
+    "import os\n",
+    "os.chdir(\"/home/neo/Downloads/CODE_Other_Models/bonsai/bonsai/models/vae\")\n",
+    "sys.path.append('/home/neo/Downloads/CODE_Other_Models/bonsai')\n",
+    "\n",
     "\n",
     "import sys\n",
     "from pathlib import Path\n",
@@ -68,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,10 +87,8 @@
      "output_type": "stream",
      "text": [
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1758417174.762442 2548704 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4741 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2060, pci bus id: 0000:01:00.0, compute capability: 7.5\n",
-      "2025-09-20 22:12:54.969476: W tensorflow/core/kernels/data/cache_dataset_ops.cc:917] The calling iterator did not fully read the dataset being cached. In order to avoid unexpected truncation of the dataset, the partially cached contents of the dataset  will be discarded. This can happen if you have an input pipeline similar to `dataset.cache().take(k).repeat()`. You should use `dataset.take(k).cache().repeat()` instead.\n",
-      "WARNING:2025-09-20 22:12:54,986:jax._src.xla_bridge:864: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
-      "WARNING:jax._src.xla_bridge:An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
+      "I0000 00:00:1758719157.283911  161743 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4741 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2060, pci bus id: 0000:01:00.0, compute capability: 7.5\n",
+      "2025-09-24 10:05:57.456527: W tensorflow/core/kernels/data/cache_dataset_ops.cc:917] The calling iterator did not fully read the dataset being cached. In order to avoid unexpected truncation of the dataset, the partially cached contents of the dataset  will be discarded. This can happen if you have an input pipeline similar to `dataset.cache().take(k).repeat()`. You should use `dataset.take(k).cache().repeat()` instead.\n"
      ]
     },
     {
@@ -137,14 +139,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **3.Define Model and Load Pretrained Weights**\n",
+    "## **3.Define Model**\n",
     "\n",
     "Here we'll configure and instantiate our VAE model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,46 +154,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Loading trained model from checkpoint...\n",
-      "✅ Trained model weights loaded successfully!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/neo/anaconda3/envs/bonsai/lib/python3.11/site-packages/orbax/checkpoint/_src/serialization/type_handlers.py:1269: UserWarning: Sharding info not provided when restoring. Populating sharding info from sharding file. Please note restoration time will be slightly increased due to reading from file. Note also that this option is unsafe when restoring on a different topology than the checkpoint was saved with.\n",
-      "  warnings.warn(\n"
+      "Creating a new model with random weights...\n",
+      "New model created successfully!\n"
      ]
     }
    ],
    "source": [
-    "# --- Define the model configuration  ---\n",
-    "config = vae_lib.ModelCfg(\n",
-    "    input_dim=28*28,\n",
-    "    hidden_dims=(512,), \n",
-    "    latent_dim=10,\n",
-    ")\n",
-    "\n",
-    "# --- Create a template model and load the saved state ---\n",
-    "print(\"\\nLoading trained model from checkpoint...\")\n",
+    "# --- Create a randomly initialized model ---\n",
+    "print(\"\\nCreating a new model with random weights...\")\n",
     "\n",
     "rngs = nnx.Rngs(params=0, sample=1)\n",
-    "model_template = params_lib.create_model(cfg=config, rngs=rngs)\n",
+    "model = params_lib.create_model(cfg=config, rngs=rngs) # This is all you need!\n",
     "\n",
-    "ckpt_dir = \"/bonsai/bonsai/models/vae/tests/checkpoints\"\n",
-    "checkpointer = ocp.PyTreeCheckpointer()\n",
-    "\n",
-    "# Restore the dictionary containing 'params' and 'other_vars'\n",
-    "loaded_state_dict = checkpointer.restore(ckpt_dir)\n",
-    "\n",
-    "# Split the template model to get its structure (GraphDef)\n",
-    "graphdef, _ = nnx.split(model_template)\n",
-    "\n",
-    "# Merge the structure with the loaded parameters to create the final, trained model\n",
-    "model = nnx.merge(graphdef, loaded_state_dict['params'], loaded_state_dict['other_vars'])\n",
-    "\n",
-    "print(\"Trained model weights loaded successfully!\")"
+    "print(\"New model created successfully!\")"
    ]
   },
   {
@@ -205,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +189,7 @@
      "text": [
       "\n",
       "Running inference to reconstruct images...\n",
-      "✅ Reconstruction complete.\n"
+      "Reconstruction complete.\n"
      ]
     }
    ],
