PR requests done

--- a/bonsai/models/unet/tests/UNet_segmentation_example.ipynb
+++ b/bonsai/models/unet/tests/UNet_segmentation_example.ipynb
@@ -33,9 +33,9 @@
    "source": [
     "!pip install -q git+https://github.com/jax-ml/bonsai@main\n",
     "!pip install -q pillow matplotlib scikit-image\n",
-    "! pip install tqdm -q\n",
+    "!pip install tqdm -q\n",
     "!pip uninstall -y jax jaxlib\n",
-    "! pip install -U \"jax[cuda12]\""
+    "!pip install -U \"jax[cuda12]\""
    ]
   },
   {
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,10 @@
     "    axes[1, i].axis('off')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.savefig('unet_segmentation_results.png', dpi=150)\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"\\nFigure saved as 'unet_segmentation_results.png'\")"
    ]
   },
   {
