vae removed + support Efficientnet b0 to b5 + forward method removed + logic fixed

--- a/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
+++ b/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,24 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2372824/2425859484.py:14: DeprecationWarning: jax.lib.xla_bridge.get_backend is deprecated and will be removed in JAX v0.8.0; use jax.extend.backend.get_backend.\n",
-      "  print(f\"JAX device: {xla_bridge.get_backend().platform}\")\n",
-      "WARNING:2025-09-20 04:05:25,876:jax._src.xla_bridge:864: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "JAX version: 0.7.2\n",
-      "JAX device: cpu\n"
+      "JAX device: gpu\n"
      ]
     }
    ],
@@ -88,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,9 +122,9 @@
     "    return jnp.array(image_array[None, ...]), image \n",
     "\n",
     "def load_timm_weights_directly():\n",
-    "    \"\"\"Load EfficientNet-B0 weights directly from timm and convert to JAX format.\"\"\"\n",
+    "    \"\"\"Load EfficientNet weights directly from timm and convert to JAX format.\"\"\"\n",
     "    # Load the timm model\n",
-    "    timm_model = timm.create_model('efficientnet_b0', pretrained=True)\n",
+    "    timm_model = timm.create_model('efficientnet_b5', pretrained=True)\n",
     "    timm_model.eval()\n",
     "    \n",
     "    # Extract state dict\n",
@@ -193,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -204,23 +195,25 @@
       "Output logits shape: torch.Size([1, 1000])\n",
       "\n",
       "--- Top 5 Predictions (from TIMM pre-trained model) ---\n",
-      "1. giant_panda, panda, panda_bear, coon_bear, Ailuropoda_melanoleuca: 0.8783\n",
-      "2. brown_bear, bruin, Ursus_arctos: 0.0048\n",
-      "3. lesser_panda, red_panda, panda, bear_cat, cat_bear, Ailurus_fulgens: 0.0035\n",
-      "4. ice_bear, polar_bear, Ursus_Maritimus, Thalarctos_maritimus: 0.0024\n",
-      "5. sloth_bear, Melursus_ursinus, Ursus_ursinus: 0.0013\n"
+      "1. giant_panda, panda, panda_bear, coon_bear, Ailuropoda_melanoleuca: 0.7040\n",
+      "2. ice_bear, polar_bear, Ursus_Maritimus, Thalarctos_maritimus: 0.0049\n",
+      "3. lesser_panda, red_panda, panda, bear_cat, cat_bear, Ailurus_fulgens: 0.0031\n",
+      "4. kuvasz: 0.0029\n",
+      "5. indri, indris, Indri_indri, Indri_brevicaudatus: 0.0021\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
+    "os.chdir(\"/home/neo/Downloads/CODE_Other_Models/bonsai/bonsai\")\n",
+    "sys.path.append(\"/home/neo/Downloads/CODE_Other_Models/bonsai\")\n",
     "from bonsai.models.efficientnet import modeling as model_lib\n",
     "\n",
     "import torch\n",
     "import timm\n",
     "\n",
-    "# Load timm model\n",
-    "timm_model = timm.create_model('efficientnet_b0', pretrained=True)\n",
+    "# Load timm model - Choose between Efficientnet different models\n",
+    "timm_model = timm.create_model('efficientnet_b5', pretrained=True)\n",
     "timm_model.eval()\n",
     "\n",
     "# Preprocess image for timm (slightly different normalization)\n",
