Efficientnet's jupyter notebook improved

--- a/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
+++ b/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,6 +48,14 @@
      "text": [
       "JAX version: 0.7.2\n",
       "JAX device: gpu\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3406865/2458563210.py:13: DeprecationWarning: jax.lib.xla_bridge.get_backend is deprecated and will be removed in JAX v0.8.0; use jax.extend.backend.get_backend.\n",
+      "  print(f\"JAX device: {xla_bridge.get_backend().platform}\")\n"
      ]
     }
    ],
@@ -60,8 +68,7 @@
     "import requests\n",
     "from flax import nnx\n",
     "from jax.lib import xla_bridge\n",
-    "from PIL import Image, ImageOps\n",
-    "import torch\n",
+    "from PIL import Image\n",
     "import timm\n",
     "\n",
     "print(f\"JAX version: {jax.__version__}\")\n",
@@ -79,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,54 +128,6 @@
     "    \n",
     "    return jnp.array(image_array[None, ...]), image \n",
     "\n",
-    "def load_timm_weights_directly():\n",
-    "    \"\"\"Load EfficientNet weights directly from timm and convert to JAX format.\"\"\"\n",
-    "    # Load the timm model\n",
-    "    timm_model = timm.create_model('efficientnet_b5', pretrained=True)\n",
-    "    timm_model.eval()\n",
-    "    \n",
-    "    # Extract state dict\n",
-    "    state_dict = timm_model.state_dict()\n",
-    "    \n",
-    "    # Convert PyTorch tensors to numpy and adjust format for JAX\n",
-    "    jax_weights = {}\n",
-    "    for key, value in state_dict.items():\n",
-    "        numpy_weight = value.detach().numpy()\n",
-    "        \n",
-    "        # Convert conv weights from PyTorch (O, I, H, W) to JAX (H, W, I, O)\n",
-    "        if 'weight' in key and len(numpy_weight.shape) == 4:\n",
-    "            numpy_weight = np.transpose(numpy_weight, (2, 3, 1, 0))\n",
-    "        \n",
-    "        jax_weights[key] = numpy_weight\n",
-    "    \n",
-    "    return jax_weights\n",
-    "\n",
-    "def apply_weights_to_model(model, weights_dict):\n",
-    "    \"\"\"Apply converted weights to the JAX model.\"\"\"\n",
-    "\n",
-    "    weight_mapping = {\n",
-    "        'conv_stem.weight': 'stem_conv.kernel',\n",
-    "        'bn1.weight': 'stem_bn.scale',\n",
-    "        'bn1.bias': 'stem_bn.bias',\n",
-    "        # Add more mappings as needed...\n",
-    "        'classifier.weight': 'classifier.kernel',\n",
-    "        'classifier.bias': 'classifier.bias',\n",
-    "    }\n",
-    "    \n",
-    "    for timm_name, jax_name in weight_mapping.items():\n",
-    "        if timm_name in weights_dict:\n",
-    "            # Navigate to the parameter in the model and update it\n",
-    "            param_path = jax_name.split('.')\n",
-    "            current = model\n",
-    "            for part in param_path[:-1]:\n",
-    "                current = getattr(current, part)\n",
-    "            \n",
-    "            # Set the parameter value\n",
-    "            param_name = param_path[-1]\n",
-    "            if hasattr(current, param_name):\n",
-    "                setattr(current, param_name, \n",
-    "                       nnx.Param(jnp.array(weights_dict[timm_name])))\n",
-    "\n",
     "imagenet_classes = load_imagenet_classes()\n",
     "\n"
    ]
@@ -177,14 +136,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **3. Load EfficientNet Model**\n",
+    "## **3. Load EfficientNet Model and Run Inference**\n",
     "\n",
     "Now let's load the EfficientNet-B0 model from the Bonsai library. We will initialize it with random weights."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -204,9 +163,6 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "os.chdir(\"/home/neo/Downloads/CODE_Other_Models/bonsai/bonsai\")\n",
-    "sys.path.append(\"/home/neo/Downloads/CODE_Other_Models/bonsai\")\n",
     "from bonsai.models.efficientnet import modeling as model_lib\n",
     "\n",
     "import torch\n",
@@ -244,16 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **4. Run Inference**\n",
-    "\n",
-    "We will now perform a forward pass with a sample image. The output will be random logits, but it will confirm that the model's architecture works correctly and produces an output with the expected shape for classification."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## **5. Visualize Results**\n",
+    "## **4. Visualize Results**\n",
     "\n",
     "Let's visualize the input image and the top-5 (random) predictions from our untrained model."
    ]
