efficientnet jax inference fixed

--- a/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
+++ b/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
@@ -54,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3406865/2458563210.py:13: DeprecationWarning: jax.lib.xla_bridge.get_backend is deprecated and will be removed in JAX v0.8.0; use jax.extend.backend.get_backend.\n",
+      "/tmp/ipykernel_1212921/2458563210.py:13: DeprecationWarning: jax.lib.xla_bridge.get_backend is deprecated and will be removed in JAX v0.8.0; use jax.extend.backend.get_backend.\n",
       "  print(f\"JAX device: {xla_bridge.get_backend().platform}\")\n"
      ]
     }
@@ -143,57 +143,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Fetching 'efficientnet_b0' weights from timm for JAX model 'efficientnet_b0'...\n",
+      "Loading pre-trained weights directly into the model...\n",
+      "Successfully loaded pre-trained weights into the model.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E0930 21:52:25.787910 1212921 cuda_timer.cc:86] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0930 21:52:25.917121 1212921 cuda_timer.cc:86] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0930 21:52:27.379947 1212921 cuda_timer.cc:86] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0930 21:52:27.509667 1212921 cuda_timer.cc:86] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Input image shape: (1, 224, 224, 3)\n",
-      "Output logits shape: torch.Size([1, 1000])\n",
+      "Output logits shape: (1, 1000)\n",
       "\n",
-      "--- Top 5 Predictions (from TIMM pre-trained model) ---\n",
-      "1. giant_panda, panda, panda_bear, coon_bear, Ailuropoda_melanoleuca: 0.7040\n",
-      "2. ice_bear, polar_bear, Ursus_Maritimus, Thalarctos_maritimus: 0.0049\n",
-      "3. lesser_panda, red_panda, panda, bear_cat, cat_bear, Ailurus_fulgens: 0.0031\n",
-      "4. kuvasz: 0.0029\n",
-      "5. indri, indris, Indri_indri, Indri_brevicaudatus: 0.0021\n"
+      "--- Top 5 Predictions (from BONSAI JAX model B0) ---\n",
+      "1. giant_panda, panda, panda_bear, coon_bear, Ailuropoda_melanoleuca: 0.8436\n",
+      "2. brown_bear, bruin, Ursus_arctos: 0.0054\n",
+      "3. ice_bear, polar_bear, Ursus_Maritimus, Thalarctos_maritimus: 0.0049\n",
+      "4. lesser_panda, red_panda, panda, bear_cat, cat_bear, Ailurus_fulgens: 0.0047\n",
+      "5. sloth_bear, Melursus_ursinus, Ursus_ursinus: 0.0015\n"
      ]
     }
    ],
    "source": [
-    "from bonsai.models.efficientnet import modeling as model_lib\n",
+    "import os\n",
+    "import sys\n",
+    "os.chdir(\"/home/neo/Downloads/CODE_Other_Models/bonsai\")\n",
+    "sys.path.append(os.getcwd())\n",
     "\n",
-    "import torch\n",
-    "import timm\n",
+    "# Import your model creation and weight loading functions\n",
+    "from bonsai.models.efficientnet import params as params_lib\n",
     "\n",
-    "# Load timm model - Choose between Efficientnet different models\n",
-    "timm_model = timm.create_model('efficientnet_b5', pretrained=True)\n",
-    "timm_model.eval()\n",
+    "# Define model name\n",
+    "model_name = 'efficientnet_b0'\n",
     "\n",
-    "# Preprocess image for timm (slightly different normalization)\n",
+    "# 2. Create a B0 model instance\n",
+    "rngs = nnx.Rngs(0)\n",
+    "jax_model = params_lib.EfficientNetB0(num_classes=1000, rngs=rngs)\n",
+    "\n",
+    "# Download the pre-trained weights for B0\n",
+    "pretrained_weights = params_lib.get_timm_pretrained_weights(model_name)\n",
+    "\n",
+    "# Load the downloaded weights into your JAX model instance\n",
+    "jax_model = params_lib.load_pretrained_weights(jax_model, pretrained_weights)\n",
+    "\n",
+    "# Prepare the input image\n",
     "image_url = \"https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Giant_Panda_2004-03-2.jpg/1024px-Giant_Panda_2004-03-2.jpg\"\n",
+    "# 3. Use the correct resolution for B0\n",
     "input_tensor, original_image = preprocess_image(image_url, target_size=(224, 224))\n",
     "\n",
-    "# Convert JAX tensor to PyTorch and transpose from NHWC to NCHW\n",
-    "torch_input = torch.from_numpy(np.array(input_tensor))\n",
-    "torch_input = torch_input.permute(0, 3, 1, 2)  # Convert from NHWC to NCHW\n",
+    "# Run inference with your JAX model\n",
+    "jax_logits = jax_model(input_tensor, training=False)\n",
     "\n",
-    "# Run inference with timm\n",
-    "with torch.no_grad():\n",
-    "    torch_logits = timm_model(torch_input)\n",
-    "    torch_probs = torch.nn.functional.softmax(torch_logits[0], dim=0)\n",
+    "# Post-process the output using JAX functions\n",
+    "jax_probs = jax.nn.softmax(jax_logits, axis=-1)\n",
     "\n",
     "# Get top-5 predictions\n",
     "top_k = 5\n",
-    "top_probs, top_indices = torch.topk(torch_probs, top_k)\n",
+    "top_probs, top_indices = jax.lax.top_k(jax_probs[0], k=top_k)\n",
     "\n",
+    "# Ensure the results are on the host for printing\n",
+    "top_probs = np.array(top_probs)\n",
+    "top_indices = np.array(top_indices)\n",
+    "\n",
+    "# Print the results\n",
     "print(f\"Input image shape: {input_tensor.shape}\")\n",
-    "print(f\"Output logits shape: {torch_logits.shape}\")\n",
-    "print(\"\\n--- Top 5 Predictions (from TIMM pre-trained model) ---\")\n",
+    "print(f\"Output logits shape: {jax_logits.shape}\")\n",
+    "print(\"\\n--- Top 5 Predictions (from BONSAI JAX model B0) ---\")\n",
     "for i, (idx, prob) in enumerate(zip(top_indices, top_probs)):\n",
-    "    print(f\"{i+1}. {imagenet_classes[idx]}: {prob:.4f}\")\n"
+    "    print(f\"{i+1}. {imagenet_classes[idx]}: {prob:.4f}\")"
    ]
   },
   {
